# codertool

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/agents/: architect.py  base.py  coder.py  devops.py  reviewer.py
src/core/: config.py  memory.py
src/integrations/: github.py  railway.py
vscode-extension/: package-lock.json  package.json  tsconfig.json  webpack.config.js
vscode-extension/src/: extension.ts
