[tool.poetry]
name = "codertool"
version = "0.1.0"
description = "Claude-powered multi-agent development system"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
anthropic = "^0.5.0"
pydantic = "^2.4"
python-dotenv = "^1.0.0"
httpx = "^0.25.0"
PyGithub = "^2.1.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.4"
black = "^23.9"
isort = "^5.12"
mypy = "^1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"